# clipboard

./: CMakeLists.txt  README.md  config.h.in
src/: clipboardmanager.cpp  clipboardmanager.h  clipboardtray.cpp  clipboardtray.h  main.cpp  settingsdialog.cpp  settingsdialog.h
